--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -50,7 +50,7 @@ h3 {
     box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.4);
 }
 
-main ul li {
+#main_Home ul li {
     text-transform: uppercase;
     font-size: 22px;
     margin: 10px 0;
@@ -70,111 +70,7 @@ header {
     background-color: var(--azulP);
 }
 
-.header_conteudo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-}
 
-.menu_barras {
-    display: none;
-    z-index: 1;
-}
-
-.menu_barras>img {
-    width: 50px;
-}
-
-.barras{
-    /* border-top: 5px solid var(--branco); */
-    width: 40px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: var(--branco);
-    display: block;
-    margin-top: 5px;
-    position: relative;
-    transition: .5s;
-}
-
-.barras::after{
-    content: '';
-    display: block;
-    width: 40px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: var(--branco);
-    position: absolute;
-    top: 12px;
-    transition: .5s;
-}
-
-.barras::before{
-    content: '';
-    display: block;
-    width: 40px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: var(--branco);
-    position: absolute;
-    top: -12px;
-    transition: .5s;
-}
-
-.ativo .barras{
-    /* background-color: transparent; */
-    transform: rotate(135deg);
-}
-
-.ativo .barras::after{
-    transform: rotate(-270deg);
-    top: 0;
-}
-
-.ativo .barras::before{
-    /* transform: rotate(90deg); */
-    top: 0;
-}
-
-.header_logo {
-    width: 50%;
-    max-width: 220px;
-}
-
-header nav {
-    max-width: 550px;
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: var(--font1);
-    font-size: 18px;
-}
-
-header nav>div {
-    display: flex;
-    justify-content: space-between;
-    width: 65%;
-}
-
-header nav a {
-    color: var(--branco);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: var(--font2);
-}
-
-.header_botao_login {
-    border: 4px solid var(--rosa);
-    padding: 4px 30px;
-    border-radius: 30%;
-    font-family: var(--font1);
-}
-
-.header_icone_login{
-    display: none;
-}
 
 /* BANNER */
 .banner {
@@ -337,7 +233,7 @@ header nav a {
     font-family: var(--font2);
 }
 
-main ul{
+#main_Home ul{
     margin: 50px 0 50px 25px;
 }
 
@@ -403,117 +299,6 @@ main ul{
     font-family: var(--font2);
     color: var(--azulC);
 }
-
-
-
-
-
-/* FOOTER */
-footer {
-    background-image: 
-        linear-gradient( #06082170, #06082170),
-        url("../../assets/imagens/background_footer.png");
-    background-size: cover;
-    color: var(--branco);
-}
-
-.rodape {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-
-.span_dicas {
-    width: 100%;
-    max-width: 860px;
-    height: 300px;
-    background: rgba(255, 255, 255, 0.01);
-    border: 1px solid #FFFFFF;
-    box-shadow: 30px 30px 60px rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(7.5px);
-    border-radius: 60px;
-    top: -35px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    position: relative;
-}
-
-.span_dicas img {
-    position: absolute;
-    top: -100px;
-    left: 70px;
-    width: 40%;
-    max-width: 300px;
-    /* width: 300px; */
-}
-
-.span_dicas_texto {
-    width: 52%;
-    font-family: var(--font2);
-    font-size: 24px;
-    padding-right: 40px;
-}
-
-.span_dicas_texto p {
-    margin-bottom: 30px;
-}
-
-.botao_dicas {
-    padding: 10px 50px;
-    color: var(--azul);
-    background-color: var(--branco);
-}
-
-.rodape>p {
-    font-family: var(--font2);
-    margin-bottom: 10px;
-}
-
-.rodape_conteudo {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0;
-}
-
-.rodape_conteudo h2 {
-    font-size: 24px;
-}
-
-.rodape_conteudo>img {
-    width: 40%;
-    max-width: 400px;
-    min-width: 250px;
-}
-
-.rodape_conteudo_paginas ul {
-    font-family: var(--font2);
-    font-size: 18px;
-}
-
-.rodape_conteudo_contatos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-.rodape_conteudo_contatos img {
-    width: 45px;
-    margin: 10px;
-}
-
-.rodape_conteudo_contatos>a {
-    font-family: var(--font2);
-    font-size: 18px;
-    text-decoration: none;
-    color: var(--branco);
-}
-
-
-
 
 
 /* MEDIAS */
@@ -612,7 +397,7 @@ footer {
         padding: 0;
     }
 
-    main ul {
+    #main_Home ul {
         text-align: initial;
     }
 
@@ -630,31 +415,7 @@ footer {
         margin-top: 100px;
     }
 
-    /* FOOTER */
-    .span_dicas_texto{
-        width: 90%;
-        text-align: center;
-    }
-
-    .rodape_conteudo{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .rodape_conteudo_contatos{
-        align-items: center;
-        margin: 50px 0;
-    }
-
-    .rodape_conteudo>img{
-        order: -1;
-    }
-
-    .rodape_conteudo_paginas{
-        order: 1;
-    }
-}
-
+   
 @media screen and (max-width: 500px) {
     .banner_conteudo {
         font-size: 13px;
@@ -668,11 +429,11 @@ footer {
         font-size: 22px;
     }
 
-    main ul {
+    #main_Home ul {
         margin: 40px 0;
     }
 
-    main ul li {
+    #main_Home ul li {
         font-size: 17px;
     }
 
@@ -692,5 +453,5 @@ footer {
         font-size: 18px;
     }
 
-
+}
 }
